--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Courtney Smith"
-  avatar           : "githubpic.png"
+  avatar           : "SMITH_COURTNEY.png"
   bio              : "MD/PhD Student in Genetics at Stanford University | Lab of Jonathan Pritchard"
   location         : "Stanford, CA"
   employer         :
@@ -175,18 +175,18 @@ kramdown:
 
 # Collections
 collections:
-  teaching:
-    output: true
-    permalink: /:collection/:path/
+ # teaching:
+  #  output: true
+  #  permalink: /:collection/:path/
   publications:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+#  portfolio:
+  #  output: true
+  #  permalink: /:collection/:path/
+ # talks:
+ #   output: true
+  #  permalink: /:collection/:path/
 
 
 # Defaults
