--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Courtney Smith"
-  avatar           : "SMITH_COURTNEY.png"
+  avatar           : "SMITH_COURTNEY.jpeg"
   bio              : "MD/PhD Student in Genetics at Stanford University | Lab of Jonathan Pritchard"
   location         : "Stanford, CA"
   employer         :
