--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About Me"
+title                    : "Courtney Smith"
 title_separator          : "-"
 name                     : &name "Courtney Smith"
 description              : &description "MD/PhD Student in Genetics at Stanford University"
