--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "Publications"
     url: /publications/
 
+  - title: "Tutorials"
+    url: /year-archive/
+
   - #title: "Talks2"
     #url: /talks/    
 
@@ -11,9 +14,6 @@ main:
     
   - #title: "Portfolio"
     #url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
     
   - #title: "CV"
     #url: /cv/
