--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Courtney Smith"
+  name             : "Courtney J. Smith"
   avatar           : "SMITH_COURTNEY.jpeg"
   bio              : "MD/PhD Student in Genetics at Stanford University | Lab of Jonathan Pritchard"
   location         : "Stanford, CA"
